# RutgersCourseDatabase_Updated

./: .replit  Degree_Scrapper.py  README.md  app.py  course_fetcher.py  discord_bot.py  main.py  majors_minors_requirements.csv  pyproject.toml  readme.md  replit.nix  room_fetcher.py  rutgers_salaries.csv  salary_api.py
attached_assets/: Pasted-Accounting-010-Administrative-Studies-011-African-Studies-016-African-Middle-Eastern-and-Sou-1739568569451.txt  Pasted-import-json-import-csv-import-requests-from-datetime-import-datetime-Import-for-time-conversi-1739568200099.txt
data/: snipes.db  snipes.sql
static/: docs.html  script.js  styles.css
static/css/: style.css
static/js/: docs.js
templates/: docs.html  room_details.html  room_search.html  search.html  select.html
