[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.10.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-caching>=2.3.0",
    "apscheduler>=3.11.0",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "urllib3>=2.3.0",
    "discord-py>=2.4.0",
    "rapidfuzz>=3.12.1",
    "pandas>=2.2.3",
    "beautifulsoup4>=4.13.3",
]
